tests/error/comptime/check_dereference16.bz
function test()
{
	(consteval {
		let &_ = {
			let i = 0;
			i
		};
	});
}
